# stats

./: correlation_table.csv  covariance_table.csv  lect05.ipynb  lect05.py  lect07.ipynb  lect07.py  main.py  main.typ  pyproject.toml  skiveAvg.csv
finans_project/: ETF_dokumentation.xls  finans_project.ipynb  finans_project.py  sum.csv
