[project]
name = "stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipython>=9.3.0",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "scipy>=1.15.3",
    "statsmodels>=0.14.4",
]
